fixing alignment for .correct class

--- a/app.css
+++ b/app.css
@@ -113,5 +113,5 @@ button{
 
 .correct{
   font-size: 25px;
-  margin-top: 13px;
+  margin-top: 6px;
 }
